finished hero banner

--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,4 +1,9 @@
 //Fonts
 $montserrat:'Montserrat', sans-serif;
-$opensans:'Open Sans', sans-serif;
-$sourcesans:'Source Sans Pro', sans-serif;
+$open-sans:'Open Sans', sans-serif;
+$source-sans:'Source Sans Pro', sans-serif;
+
+//Colors
+$white: #FFFFFF;
+$title-color:#2C4058;
+
