--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -1,3 +1,59 @@
-body{
-    background-color: antiquewhite;
+.hero{
+    background-image: url('/assets/Hero-background-image.png');
+    margin-bottom: 100px;
+    color: $white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 800px;
+    .hero-banner-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 800px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: linear-gradient(243.43deg, #7E5AFF 16.9%, #55B7FF 83.27%);
+            opacity: 0.9;
+            z-index: -11;
+        }
+        .hero-banner-text{
+            text-align: center;
+            text-transform: uppercase;
+        }
+        .hero-banner__title{
+            font-weight: bold;
+            font-family: $montserrat;
+            h1{
+                font-size: 80px;
+                letter-spacing: 10%;
+                margin-bottom: 20px;
+            }
+            .subtitle{
+                font-size: 18px;
+                line-height: 1.371em;
+                letter-spacing: 30%;
+                font-weight: 400;
+            }
+        }
+       
+        a{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 240px;
+            position: absolute;
+            bottom: 50px;
+        }
+    }
 }
+
+    
+
